--- a/resources/sass/components/_previewInternship.scss
+++ b/resources/sass/components/_previewInternship.scss
@@ -15,7 +15,7 @@
     border: none;
 }
 
-.preview__container__title{
+.preview__container__title {
     display: block;
     width: 100%;
     padding-bottom: 1em;
@@ -29,7 +29,6 @@
     box-shadow: $breadcrumbShadow;
     border: none;
     background: $whiteColor;
-    width: 250px;
     height: 250px;
     margin: 0px 10px 30px -5px;
 }
@@ -41,7 +40,7 @@
     height: 100%;
 }
 
-.preview__form{
+.preview__form {
     position: absolute;
     left: 86%;
     top: -1px;
@@ -55,7 +54,7 @@
     background-color: $whiteColor;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: inherit;
+    width: 100%;
 }
 
 .preview__text--internship {
@@ -73,20 +72,24 @@
     text-overflow: ellipsis;
 }
 
-.preview__text--company{
+.preview__text--company {
     font-size: $companySmallSize;
     font-weight: $lightWeight;
     padding-top: 0.5em;
 }
 
-.preview__button--add{
+.preview__button--add {
     display: block;
     width: 100%;
     margin-bottom: 1em;
 }
 
+.preview__container--link {
+    flex: 1 1 250px;
+}
+
 @media (min-width: 1024px) {
-	.preview__container {
-		justify-content: initial;;
-	}
+    .preview__container {
+        justify-content: initial;
+    }
 }
